# verkle-tree

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/batch_proof/: mod.rs
src/batch_proof_fr/: mod.rs
src/batch_proof_fs/: mod.rs
src/bn256_fr_value_verkle_tree/: leaf.rs  mod.rs
src/bn256_verkle_tree/: leaf.rs  mod.rs  path.rs  proof.rs
src/bn256_verkle_tree_fs/: leaf.rs  mod.rs  proof.rs
src/ipa/: config.rs  ff_utils.rs  mod.rs  proof.rs  transcript.rs  utils.rs
src/ipa_fr/: config.rs  mod.rs  proof.rs  rns.rs  transcript.rs  utils.rs
src/ipa_fs/: config.rs  mod.rs  proof.rs  transcript.rs  utils.rs
src/poseidon/: mod.rs
src/verkle_tree/: bn256_verkle_tree.rs  leaf.rs  mod.rs  path.rs  proof.rs  tree.rs  trie.rs  utils.rs  witness.rs
src/verkle_tree_fs/: mod.rs  trie.rs  utils.rs  witness.rs
test_cases/fr_case1/: proof.json
test_cases/fs_case1/: proof.json
